Ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoramento
  annotations:
    kubernetes.io/ingress.class: nginx

  spec:
    ingressClassName: nginx
    rules:
      - host: prometheus.local
        http:
          paths:
          - backend:
              service:
                name: prometheus-svc
                port: 
                  number: 7700
            path: /
            pathType: Prefix
